--- a/src/app/topic/components/topic-discussion-create-dialog/topic-discussion-create-dialog.component.html
+++ b/src/app/topic/components/topic-discussion-create-dialog/topic-discussion-create-dialog.component.html
@@ -135,12 +135,13 @@
         <div id="form_area">
           <div class="content_section">
             <div class="section_content_wrap">
-              <div class="bold" translate="VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_QUESTION">
+              <div class="bold" translate="COMPONENTS.TOPIC_DISCUSSION_CREATE.SETTINGS_HEADING_DISCUSSION_QUESTION">
               </div>
+              <div translate="COMPONENTS.TOPIC_DISCUSSION_CREATE.SETTINGS_HEADING_DISCUSSION_QUESTION_DESC"></div>
               <div class="section_content_description">
-                <cos-input placeholder="{{'VIEWS.TOPIC_CREATE.SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER' | translate}}">
+                <cos-input placeholder="{{'COMPONENTS.TOPIC_DISCUSSION_CREATE.SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER' | translate}}">
                   <input id="groupName"
-                    [placeholder]="'VIEWS.TOPIC_CREATE.SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER' | translate"
+                    [placeholder]="'COMPONENTS.TOPIC_DISCUSSION_CREATE.SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER' | translate"
                     [(ngModel)]="discussion.question">
                 </cos-input>
               </div>
@@ -148,7 +149,7 @@
           </div>
           <div class="section_content_wrap">
             <div class="header_wrap">
-              <div class="bold" translate="VIEWS.TOPIC_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE">
+              <div class="bold" translate="COMPONENTS.TOPIC_DISCUSSION_CREATE.SETTINGS_HEADING_DISCUSSION_DEADLINE">
               </div>
             </div>
           </div>
