--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1582,11 +1582,15 @@ tour-item-template {
         padding-top: 8px;
       }
       .vote_option {
+        padding: 0;
         background-color: var(--color-surfaces);
         font-weight: 600;
         border: none;
         box-shadow: 0px 2px 4px 0px rgba(220, 231, 240, 0.3);
 
+        .radio_lable_wrap {
+          padding: 16px;
+        }
         &.voting {
           &:hover {
             background-color: var(--color-voting-disabled);
@@ -1624,6 +1628,17 @@ tour-item-template {
           .radio::after {
             display: block;
           }
+        }
+      }
+
+      .view_idea_wrap {
+        top: 0;
+        right: 0;
+        padding: 16px;
+        background: var(--color-secondary);
+
+        a {
+          line-height: 24px;
         }
       }
     }
