--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -131,7 +131,8 @@
               </button>
               <div class="line_separator"></div>
             </ng-container>
-            <ng-container *ngIf="(auth.loggedIn$ | async) && TopicService.canEdit(topic) && !topic.voteId">
+            <ng-container
+              *ngIf="(auth.loggedIn$ | async) && TopicService.canEdit(topic) && !topic.voteId && !topic.ideationId">
               <button class="option" [routerLink]="['/','topics', 'edit', topic.id]">
                 <div class="icon_wrap">
                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -292,7 +293,8 @@
         </a>
       </div>
       <div id="activities_button_wrap" [TourItem]="{tourid: 'topic', index: 8, position: 'left'}">
-        <button *ngIf="(auth.loggedIn$ | async)" class="btn_medium_close icon" (click)="toggleFavourite(topic);" [ngClass]="{like_active: topic.favourite}">
+        <button *ngIf="(auth.loggedIn$ | async)" class="btn_medium_close icon" (click)="toggleFavourite(topic);"
+          [ngClass]="{like_active: topic.favourite}">
 
           <svg *ngIf="!topic.favourite" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
             fill="none">
@@ -1502,9 +1504,23 @@
             <span translate="VIEWS.TOPICS_TOPICID.OPTION_INVITE_CO_EDITOR"></span>
           </button>
         </ng-container>
-        <ng-container *ngIf="(auth.loggedIn$ | async) && TopicService.canEdit(topic) && !topic.voteId">
+        <ng-container *ngIf="(auth.loggedIn$ | async) && TopicService.canEdit(topic) && !topic.voteId && !topic.ideationId">
           <div class="line_separator"></div>
           <button class="option" [routerLink]="['/','topics', 'edit', topic.id]">
+            <div class="icon_wrap">
+              <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M8.8143 4.18517L11.8147 7.18569L5.29947 13.7012L2.62438 13.9965C2.26626 14.0361 1.96369 13.7333 2.00354 13.3752L2.30118 10.6981L8.8143 4.18517ZM13.6704 3.73845L12.2616 2.3296C11.8222 1.89013 11.1095 1.89013 10.67 2.3296L9.34467 3.65501L12.3451 6.65553L13.6704 5.33011C14.1099 4.89042 14.1099 4.17791 13.6704 3.73845Z"
+                  fill="#2C3B47" />
+              </svg>
+            </div>
+            <span translate="VIEWS.TOPICS_TOPICID.OPTION_EDIT_TOPIC"></span>
+          </button>
+        </ng-container>
+        <ng-container
+          *ngIf="(auth.loggedIn$ | async) && topic.ideationId && (TopicService.canDelete(topic) || TopicService.canEdit(topic) && topic.status === TopicService.STATUSES.draft)">
+          <div class="line_separator"></div>
+          <button class="option" [routerLink]="['/','topics', 'ideation', 'edit', topic.id]">
             <div class="icon_wrap">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
