--- a/src/app/account/components/register-form/register-form.component.html
+++ b/src/app/account/components/register-form/register-form.component.html
@@ -113,10 +113,10 @@
       </label>
       <div class="checbox_description"><span translate="COMPONENTS.REGISTER_FORM.LBL_SHOW_IN_SEARCH_DESCRIPTION"
           (click)="allowSearch()">
-          <div class="tooltip" tooltip>
+          <!--div class="tooltip" tooltip>
             <div class="content_title">Help on its way</div>
             <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-          </div>
+          </!--div-->
         </span></div>
     </div>
 
