--- a/src/app/ideation/components/ideation-create/ideation-create.component.html
+++ b/src/app/ideation/components/ideation-create/ideation-create.component.html
@@ -269,11 +269,11 @@
                   <div class="block_section" *ngIf="!(topic.imageUrl || tmpImageUrl)">
                     <div>
                       <div class="bold" translate="VIEWS.IDEATION_CREATE.HEADER_IMAGE_UPLOAD_DESC">
-                        <div class="tooltip" tooltip>
+                        <!--div class="tooltip" tooltip>
                           <div class="content_title">Help on its way</div>
                           <div class="content_description">Help text coming soon! Please tell us what help you were
                             looking for.</div>
-                        </div>
+                        </!--div-->
                       </div>
                       <div translate="VIEWS.IDEATION_CREATE.HEADER_IMAGE_UPLOAD_DESC_TEXT"></div>
                     </div>
@@ -367,11 +367,11 @@
               <div class="block_title_wrap" (click)="block.description = true;">
                 <div>
                   <div class="block_title" translate="VIEWS.IDEATION_CREATE.TITLE_DESCRIPTION">
-                    <div class="tooltip" tooltip>
+                    <!--div class="tooltip" tooltip>
                       <div class="content_title">Help on its way</div>
                       <div class="content_description">Help text coming soon! Please tell us what help you were looking
                         for.</div>
-                    </div>
+                    </!--div-->
                   </div>
                   <!--div *ngIf="!block.description" translate="VIEWS.IDEATION_CREATE.TITLE_DESCRIPTION_TEXT"></!--div-->
                 </div>
@@ -496,19 +496,19 @@
 
                   <div class="small_heading" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_VISIBILITY"></div>
                   <div class="mobile_hidden" translate="VIEWS.IDEATION_CREATE.SETTINGS_VISIBILITY_DESC">
-                    <div class="tooltip" tooltip>
+                    <!--div class="tooltip" tooltip>
                       <div class="content_title">Help on its way</div>
                       <div class="content_description">Help text coming soon! Please tell us what help you were looking
                         for.</div>
-                    </div>
+                    </!--div-->
                   </div>
                 </div>
                 <div class="mobile_show" translate="VIEWS.IDEATION_CREATE.SETTINGS_VISIBILITY_DESC">
-                  <div class="tooltip" tooltip>
+                  <!--div class="tooltip" tooltip>
                     <div class="content_title">Help on its way</div>
                     <div class="content_description">Help text coming soon! Please tell us what help you were looking
                       for.</div>
-                  </div>
+                  </!--div-->
                 </div>
 
                 <div class="row_wrap">
@@ -586,11 +586,11 @@
                   </a>
                 </div>
                 <div class="small_heading" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_LOCALITY">
-                  <div class="tooltip" tooltip>
+                  <!--div class="tooltip" tooltip>
                     <div class="content_title">Help on its way</div>
                     <div class="content_description">Help text coming soon! Please tell us what help you were looking
                       for.</div>
-                  </div>
+                  </!--div-->
                 </div>
                 <div translate="VIEWS.IDEATION_CREATE.SETTINGS_LOCALITY_SELECT_DESC"></div>
                 <div class="row_wrap">
@@ -662,11 +662,11 @@
                     <div>3</div>
                   </div>
                   <div class="small_heading" translate="VIEWS.IDEATION_CREATE.SETTINGS_HEADING_ADD_TO_GROUP">
-                    <div class="tooltip" tooltip>
+                    <!--div class="tooltip" tooltip>
                       <div class="content_title">Help on its way</div>
                       <div class="content_description">Help text coming soon! Please tell us what help you were looking
                         for.</div>
-                    </div>
+                    </!--div-->
                   </div>
                   <div class="mobile_hidden" translate="VIEWS.IDEATION_CREATE.SETTINGS_ADD_TO_GROUP_DESC"></div>
                 </div>
