--- a/src/app/account/components/profile/profile.component.html
+++ b/src/app/account/components/profile/profile.component.html
@@ -171,11 +171,11 @@
 
           <div class="prefrence_box">
             <div class="preference_title bold" translate="VIEWS.ACCOUNT.LBL_SHOW_IN_SEARCH">
-              <div class="tooltip" tooltip>
+              <!--div class="tooltip" tooltip>
                 <div class="content_title">Help on its way</div>
                 <div class="content_description">Help text coming soon! Please tell us what help you were looking for.
                 </div>
-              </div>
+              </!--div-->
             </div>
             <div class="preference_description" translate="VIEWS.ACCOUNT.LBL_SHOW_IN_SEARCH_DESCRIPTION">
             </div>
