--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -1405,10 +1405,10 @@
         <div class="row header_row">
           <div class="name"><a translate="COMPONENTS.GROUP_INVITE.NAME"></a></div>
           <div class="level">
-            <div class="level_heading" translate="COMPONENTS.GROUP_INVITE.ROLE"><div class="tooltip" tooltip>
+            <div class="level_heading" translate="COMPONENTS.GROUP_INVITE.ROLE"><!--div class="tooltip" tooltip>
               <div class="content_title">Help on its way</div>
               <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-            </div></div>
+            </!--div--></div>
 
             <div class="button_heading" translate="COMPONENTS.GROUP_INVITE.ACTIONS" *ngIf="canUpdate(group)"></div>
           </div>
