--- a/src/app/topic/components/invite-editors/invite-editors.component.html
+++ b/src/app/topic/components/invite-editors/invite-editors.component.html
@@ -9,10 +9,10 @@
     </div>
     <div class="dialog_header">
       <div class="header_text">
-        <h4 class="title" translate="COMPONENTS.TOPIC_INVITE_EDITORS.HEADING"><div class="tooltip" tooltip>
+        <h4 class="title" translate="COMPONENTS.TOPIC_INVITE_EDITORS.HEADING"><!--div class="tooltip" tooltip>
           <div class="content_title">Help on its way</div>
           <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-        </div></h4>
+        </!--div--></h4>
         <div class="dialog_close">
           <a class="btn_dialog_close icon" dialog-close>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -148,10 +148,10 @@
                 <div class="row header_row">
                   <div class="name"><a translate="COMPONENTS.GROUP_INVITE.NAME"></a></div>
                   <div class="level">
-                    <div class="level_heading" translate="COMPONENTS.GROUP_INVITE.ROLE"><div class="tooltip" tooltip>
+                    <div class="level_heading" translate="COMPONENTS.GROUP_INVITE.ROLE"><!--div class="tooltip" tooltip>
                       <div class="content_title">Help on its way</div>
                       <div class="content_description">Help text coming soon! Please tell us what help you were looking for.</div>
-                    </div></div>
+                    </!--div--></div>
 
                     <div class="button_heading" translate="COMPONENTS.GROUP_INVITE.ACTIONS"></div>
                   </div>
