--- a/src/app/topic/components/topic-form/topic-form.component.html
+++ b/src/app/topic/components/topic-form/topic-form.component.html
@@ -271,11 +271,11 @@
                 <div class="block_section" *ngIf="!(topic.imageUrl || tmpImageUrl)">
                   <div>
                     <div class="bold" translate="VIEWS.TOPIC_CREATE.HEADER_IMAGE_UPLOAD_DESC">
-                      <div class="tooltip" tooltip>
+                      <!--div class="tooltip" tooltip>
                         <div class="content_title">Help on its way</div>
                         <div class="content_description">Help text coming soon! Please tell us what help you were
                           looking for.</div>
-                      </div>
+                      </!--div-->
                     </div>
                     <div translate="VIEWS.TOPIC_CREATE.HEADER_IMAGE_UPLOAD_DESC_TEXT"></div>
                   </div>
@@ -363,11 +363,11 @@
             <div class="block_title_wrap" (click)="block.description = true;">
               <div>
                 <div class="block_title" translate="VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION">
-                  <div class="tooltip" tooltip>
+                  <!--div class="tooltip" tooltip>
                     <div class="content_title">Help on its way</div>
                     <div class="content_description">Help text coming soon! Please tell us what help you were looking
                       for.</div>
-                  </div>
+                  </!div-->
                 </div>
                 <!--div *ngIf="!block.description" translate="VIEWS.TOPIC_CREATE.TITLE_DESCRIPTION_TEXT"></!--div-->
               </div>
@@ -483,19 +483,19 @@
                 <div class="small_heading" translate="VIEWS.TOPIC_CREATE.SETTINGS_HEADING_VISIBILITY"></div>
 
                 <div class="mobile_hidden" translate="VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_DESC">
-                  <div class="tooltip" tooltip>
+                  <!--div class="tooltip" tooltip>
                     <div class="content_title">Help on its way</div>
                     <div class="content_description">Help text coming soon! Please tell us what help you were looking
                       for.</div>
-                  </div>
+                  </!--div-->
                 </div>
               </div>
               <div class="mobile_show" translate="VIEWS.TOPIC_CREATE.SETTINGS_VISIBILITY_DESC">
-                <div class="tooltip" tooltip>
+                <!--div class="tooltip" tooltip>
                   <div class="content_title">Help on its way</div>
                   <div class="content_description">Help text coming soon! Please tell us what help you were looking for.
                   </div>
-                </div>
+                </!--div-->
               </div>
               <div class="row_wrap">
                 <div class="radio_wrap" (click)="topic.visibility = VISIBILITY.private"
@@ -571,11 +571,11 @@
               </div>
               <div class="header_wrap">
                 <div class="small_heading" translate="VIEWS.TOPIC_CREATE.SETTINGS_HEADING_LOCALITY">
-                  <div class="tooltip" tooltip>
+                  <!--div class="tooltip" tooltip>
                     <div class="content_title">Help on its way</div>
                     <div class="content_description">Help text coming soon! Please tell us what help you were looking
                       for.</div>
-                  </div>
+                  </!--div-->
                 </div>
                 <div class="mobile_hidden" translate="VIEWS.TOPIC_CREATE.SETTINGS_LOCALITY_SELECT_DESC"></div>
               </div>
@@ -649,11 +649,11 @@
                   <div>3</div>
                 </div>
                 <div class="small_heading" translate="VIEWS.TOPIC_CREATE.SETTINGS_HEADING_ADD_TO_GROUP">
-                  <div class="tooltip" tooltip>
+                  <!--div class="tooltip" tooltip>
                     <div class="content_title">Help on its way</div>
                     <div class="content_description">Help text coming soon! Please tell us what help you were looking
                       for.</div>
-                  </div>
+                  </!--div-->
                 </div>
                 <div class="mobile_hidden" translate="VIEWS.TOPIC_CREATE.SETTINGS_ADD_TO_GROUP_DESC"></div>
               </div>
