--- a/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.html
+++ b/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.html
@@ -135,11 +135,11 @@
                 <div class="bold" translate="COMPONENTS.TOPIC_VOTE_CAST.HEADING_VOTE_ENDED"></div>
                 <div class="with_tooltip" *ngIf="canUpdate()"
                   translate="COMPONENTS.TOPIC_VOTE_CAST.VOTE_TXT_VOTE_ENDED">
-                  <div class="tooltip" tooltip>
+                  <!--div class="tooltip" tooltip>
                     <div class="content_title">Help on its way</div>
                     <div class="content_description">Help text coming soon! Please tell us what help you were looking
                       for.</div>
-                  </div>
+                  </!--div-->
                 </div>
                 <div class="links_wrap" *ngIf="canUpdate()">
                   <a [href]="vote.downloads.bdocVote"
@@ -181,11 +181,11 @@
                         </svg>
                       </div>
                       <span translate="COMPONENTS.TOPIC_VOTE_CAST.FINAL_OPTION_WITHOUT_CSV"></span>
-                      <div class="tooltip" tooltip>
+                      <!--div class="tooltip" tooltip>
                         <div class="content_title">Help on its way</div>
                         <div class="content_description">Help text coming soon! Please tell us what help you were
                           looking for.</div>
-                      </div>
+                      </!--div-->
                     </a>
 
                     <a (click)="triggerFinalDownload('bdoc', true)">
@@ -204,11 +204,11 @@
                         </svg>
                       </div>
                       <span translate="COMPONENTS.TOPIC_VOTE_CAST.FINAL_OPTION_WITH_CSV"></span>
-                      <div class="tooltip" tooltip>
+                      <!--div class="tooltip" tooltip>
                         <div class="content_title">Help on its way</div>
                         <div class="content_description">Help text coming soon! Please tell us what help you were
                           looking for.</div>
-                      </div>
+                      </!--div-->
                     </a>
                   </ng-container>
                   <a *ngIf="vote.authType === VOTE_AUTH_TYPES.soft"
