--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -251,7 +251,7 @@
     <div class="date">{{idea.createdAt | date: 'YYYY-MM-dd HH:mm'}}</div>
     <div class="replies_count">
       <a translate="COMPONENTS.IDEABOX.REPLIES" [translateParams]="{count: idea.replies.count}"
-        (click)="(!idea.report.id)? goToView($event): ''"></a>
+        (click)="(!idea.report.id)? goToView($event, true): ''"></a>
     </div>
   </div>
 </div>
