--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -243,7 +243,7 @@
         </div>
         <div class="idea_content">
           <div class="statement" [innerHTML]="idea.statement"></div>
-          <div class="description" [innerHTML]="idea.description"></div>
+          <div class="description" [innerHTML]="idea.description | markdown"></div>
         </div>
         <ng-container *ngIf="folders$ | async as folders">
           <div class="idea_folders_wrap" *ngIf="folders.length">
