--- a/src/assets/styles/_buttons_new.scss
+++ b/src/assets/styles/_buttons_new.scss
@@ -55,6 +55,7 @@ button,
 %btn_medium,
 %btn_small {
   background: none;
+  position: relative;
   justify-content: center;
   align-items: center;
   border: none;
