--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
@@ -238,7 +238,11 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  padding: 24px 0;
+  padding: 8px 0 24px 0;
+
+  .folders_desc {
+    margin-bottom: 24px;
+  }
   .folder_row {
     display: flex;
     flex-direction: row;
