--- a/src/app/topic/components/topic-vote-create/topic-vote-create-dialog.component.scss
+++ b/src/app/topic/components/topic-vote-create/topic-vote-create-dialog.component.scss
@@ -412,5 +412,10 @@
     .votes {
       width: 40px;
     }
+    .statement {
+      width: 100%;
+      max-height: 16px;
+      overflow: hidden;
+    }
   }
 }
