--- a/src/app/public-topics/components/topicbox/topicbox.component.html
+++ b/src/app/public-topics/components/topicbox/topicbox.component.html
@@ -64,7 +64,8 @@
               fill="#DA7AB1" />
           </svg>
           <ng-container *ngIf="milestones$ | async as milestones">
-            <div class="bold" translate="COMPONENTS.TOPICBOX.HEADER_FOLLOW_UP" [translateParams]="{value: milestones.count}">
+            <div class="bold" translate="COMPONENTS.TOPICBOX.HEADER_FOLLOW_UP"
+              [translateParams]="{value: milestones.count}">
             </div>
           </ng-container>
         </ng-container>
@@ -114,8 +115,8 @@
         <div class="clipped">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
-              d="M12 3L14.645 8.35942L20.5595 9.21885L16.2798 13.3906L17.2901 19.2812L12 16.5L6.70993 19.2812L7.72025 13.3906L3.44049 9.21885L9.35497 8.35942L12 3Z"
-              fill="#2C3B47" />
+              d="M12.5812 15.1863L12 14.7711L11.4188 15.1863L6 19.0568V6C6 5.44772 6.44772 5 7 5H17C17.5523 5 18 5.44772 18 6V19.0568L12.5812 15.1863Z"
+              fill="#2C3B47" stroke="#2C3B47" stroke-width="2" />
           </svg>
         </div>
       </div>
