--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -1415,7 +1415,7 @@
         </div>
         <ng-container *ngFor="let member of users$ | async">
           <group-member-user [member]="member" [group]="group" *ngIf="!member.invite.id"></group-member-user>
-          <group-invite-user [invite]="member" [group]="group" *ngIf="member.invite.id"></group-invite-user>
+          <group-invite-user [user]="member" [group]="group" *ngIf="member.invite.id"></group-invite-user>
         </ng-container>
       </div>
       <div class="filter_section">
