--- a/src/app/topic/components/topic-arguments/topic-arguments.component.html
+++ b/src/app/topic/components/topic-arguments/topic-arguments.component.html
@@ -383,7 +383,7 @@
       </defs>
     </svg>
     <div class="description_heading" translate="COMPONENTS.TOPIC_ARGUMENTS.NO_DISCUSSION_YET"></div>
-    <div class="button" *ngIf="TopicService.canDelete(topic)">
+    <div class="button" *ngIf="TopicService.canDelete(topic) && [TopicService.STATUSES.voting, TopicService.STATUSES.followUp, TopicService.STATUSES.closed].indexOf(topic.status) === -1">
       <button class="btn_medium_submit" (click)="doAddArgument()">
         <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
