--- a/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.scss
+++ b/src/app/topic/components/topic-vote-cast/topic-vote-cast.component.scss
@@ -123,6 +123,10 @@
             max-width: 440px;
             gap: 4px;
 
+            .heading {
+              font-size: 18px;
+              line-height: 24px;
+            }
             div {
               font-size: 14px;
               line-height: 16px;
