--- a/src/app/topic/topic.component.html
+++ b/src/app/topic/topic.component.html
@@ -1305,7 +1305,7 @@
         </svg>
         <span class="tab_text" translate="VIEWS.TOPICS_TOPICID.TAB_IDEATION"></span>
       </a>
-      <a *ngIf="!topic.discussionId" class="topic_tab discussion" [ngClass]="{'active': tabTablet==='discussion'}"
+      <a class="topic_tab discussion" [ngClass]="{'active': tabTablet==='discussion'}"
         (click)="tabTablet='discussion'" [routerLink]="['./']" fragment="discussion">
         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect width="32" height="32" rx="16" fill="#1168A8" />
