--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -291,6 +291,7 @@
   .btn_big_submit,
   .btn_big_submit_ghost {
     min-width: 160px;
+    padding: 2px 8px;
     span {
       font-weight: 600;
       font-size: 16px;
